Surefire config to quiet test warnings